--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Evgeny Kulazhskiy",
   "license": "ISC",
   "devDependencies": {
+    "array-from": "^2.1.1",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -27,10 +28,12 @@
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "fastclick": "^1.0.6",
     "file-loader": "^0.11.0",
     "get-viewport-size": "^2.0.0",
     "haz-touch": "^1.1.1",
     "html-webpack-plugin": "^2.28.0",
+    "image-webpack-loader": "^3.3.1",
     "jquery": "^3.2.1",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
