--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jquery": "^3.2.1",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
