implement logic of calculator

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "css-sourcemaps-webpack-plugin": "^1.0.3",
+    "detect-touch": "^1.1.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0",
@@ -35,10 +36,12 @@
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
     "jquery": "^3.2.1",
+    "prop-types": "^15.5.10",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-select": "^1.0.0-rc.5",
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
