--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "author": "Evgeny Kulazhskiy",
   "license": "ISC",
   "devDependencies": {
-    "array-from": "^2.1.1",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -28,14 +27,11 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "fastclick": "^1.0.6",
     "file-loader": "^0.11.0",
-    "get-viewport-size": "^2.0.0",
-    "haz-touch": "^1.1.1",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.1",
-    "jquery": "^3.2.1",
     "prop-types": "^15.5.10",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
@@ -45,10 +41,20 @@
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "viewport-js": "^1.0.0",
     "webpack": "git+https://github.com/fulls1z3/webpack.git",
     "webpack-dev-server": "^2.4.2",
     "webpack-obfuscator": "^0.9.3"
+  },
+  "dependencies": {
+    "array-from": "^2.1.1",
+    "fastclick": "^1.0.6",
+    "get-viewport-size": "^2.0.0",
+    "haz-touch": "^1.1.1",
+    "jquery": "^3.2.1",
+    "rc-checkbox": "^2.0.3",
+    "react-checkbox": "^0.1.3",
+    "react-numeric-input": "^2.0.7",
+    "viewport-js": "^1.0.0"
   },
   "browsers": {
     "android": 4,
