--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "get-viewport-size": "^2.0.0",
     "haz-touch": "^1.1.1",
     "jquery": "^3.2.1",
+    "object.assign": "^4.0.4",
+    "object.entries": "^1.0.4",
     "rc-checkbox": "^2.0.3",
     "react-checkbox": "^0.1.3",
     "react-numeric-input": "^2.0.7",
