--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "get-viewport-size": "^2.0.0",
     "haz-touch": "^1.1.1",
     "jquery": "^3.2.1",
+    "object-assign-deep": "^0.3.1",
     "object.assign": "^4.0.4",
     "object.entries": "^1.0.4",
     "rc-checkbox": "^2.0.3",
+    "react-addons-update": "^15.6.0",
     "react-checkbox": "^0.1.3",
     "react-numeric-input": "^2.0.7",
     "viewport-js": "^1.0.0"
