--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-uglify": "^1.0.2",
     "babel-preset-env": "^1.2.2",
+    "babel-preset-react": "^6.24.1",
     "babili-webpack-plugin": "^0.1.1",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
@@ -42,10 +43,6 @@
     "webpack-obfuscator": "^0.9.3"
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
-    "react-select": "^1.0.0-rc.5",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "array-from": "^2.1.1",
     "fastclick": "^1.0.6",
     "get-viewport-size": "^2.0.0",
@@ -54,10 +51,15 @@
     "object-assign-deep": "^0.3.1",
     "object.assign": "^4.0.4",
     "object.entries": "^1.0.4",
+    "prop-types": "^15.5.10",
     "rc-checkbox": "^2.0.3",
+    "react": "^15.6.1",
     "react-addons-update": "^15.6.0",
     "react-checkbox": "^0.1.3",
+    "react-dom": "^15.6.1",
     "react-numeric-input": "^2.0.7",
+    "react-select": "^1.0.0-rc.5",
+    "react-table": "^6.5.1",
     "viewport-js": "^1.0.0"
   },
   "browsers": {
