--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "eslint ./src/scripts/**/*.js",
     "dev": "webpack-dev-server",
-    "prod": "rimraf ./dist/* && cross-env NODE_ENV=production webpack -p"
+    "prod": "rimraf ./dist/* && cross-env NODE_ENV=production webpack -p",
+    "prod-fast": "rimraf ./dist/* && cross-env webpack -p"
   },
   "author": "Evgeny Kulazhskiy",
   "license": "ISC",
