remove unused devDependencies & remove unused dependencies

--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-plugin-uglify": "^1.0.2",
     "babel-preset-env": "^1.2.2",
     "babel-preset-react": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.1",
     "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "css-sourcemaps-webpack-plugin": "^1.0.3",
-    "detect-touch": "^1.1.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0",
@@ -40,28 +37,22 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "webpack": "git+https://github.com/fulls1z3/webpack.git",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-obfuscator": "^0.9.3"
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "array-from": "^2.1.1",
     "fastclick": "^1.0.6",
     "get-viewport-size": "^2.0.0",
-    "haz-touch": "^1.1.1",
     "jquery": "^3.2.1",
     "object-assign-deep": "^0.3.1",
-    "object.assign": "^4.0.4",
     "object.entries": "^1.0.4",
     "prop-types": "^15.5.10",
     "rc-checkbox": "^2.0.3",
     "react": "^15.6.1",
-    "react-addons-update": "^15.6.0",
-    "react-checkbox": "^0.1.3",
     "react-dom": "^15.6.1",
     "react-numeric-input": "^2.0.7",
     "react-select": "^1.0.0-rc.5",
-    "react-table": "^6.5.1",
-    "viewport-js": "^1.0.0"
+    "react-table": "^6.5.1"
   },
   "browsers": {
     "android": 4,
