--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-dom": "^15.6.1",
     "react-numeric-input": "^2.0.7",
     "react-select": "^1.0.0-rc.5",
-    "react-table": "^6.5.1"
+    "react-table": "^6.5.1",
+    "remodal": "^1.1.1"
   },
   "browsers": {
     "android": 4,
