--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["env", "react"]
+  "presets": ["env", "react"],
+	"plugins": [
+      "transform-runtime",
+      "transform-react-remove-prop-types",
+      "transform-react-constant-elements",
+      "transform-react-inline-elements"
+  ]
 }
